$Id: History,v 1.34 2001-03-28 16:46:06 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
March 19th, 2001     J. Apostolakis - geomvol-V03-00-03
- G4PropagatorInField: 
     Modified to use new (not obsolete) methods of G4FieldTrack. 
     Deleted old/obsolete ComputeStep method 
         (that was being used only for testing purposes, but
          could not be used anymore after change to Momentum Integration.)

March 12th, 2001     G. Cosmo - geomvol-V03-00-02
- G4ReplicaNavigation::ComputeStep(): apply push of kCarTolerance to ourStep
  in case the proposed step is zero.

February 23rd, 2001  G. Cosmo - geomvol-V03-00-01
- Restored original 0.5 shift for kPhi transformation in ComputeTransformation()
  methods, as original specifications from P.Kent impose.
- Fixed bug in ComputeTransformation(const G4int rNo, G4VPhysicalVolume* pVol)
  where 'pVol' was NOT passed to SetPhiTransformation() in the kPhi case (!).

February 15th, 2001  G. Cosmo - geomvol-V03-00-00

- Fix in G4ReplicaNavigation::ComputeTransformation(...) for kPhi case.
  Removed shift of 0.5 to center of replica volume to conform with original
  specifications for replica transformations in Phi.
- Cosmetics in G4ReplicaNavigation.cc.