@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4BlockingList.icc,v 1.3 2000-11-20 18:59:14 gcosmo Exp $
+// $Id: G4BlockingList.icc,v 1.4 2001-04-17 14:44:24 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -13,9 +13,8 @@
 //
 
 inline G4BlockingList::G4BlockingList(G4int maxDefault,G4int stride)
-  : fStride(stride), fBlockingList(maxDefault)
+  : fStride(stride), fBlockingList(maxDefault,0)
 {
-	FullyReset();
 }
 
 // Do nothing destructor
@@ -25,17 +24,17 @@ inline G4BlockingList::~G4BlockingList()
 
 inline G4int G4BlockingList::Length() const
 {
-	return fBlockingList.length();
+	return fBlockingList.size();
 }
 
 inline void G4BlockingList::BlockVolume(const G4int v)
 {
-	fBlockingList(v)=fBlockTagNo;
+	fBlockingList[v]=fBlockTagNo;
 }
 
 inline G4bool G4BlockingList::IsBlocked(const G4int v) const
 {
-	return (fBlockingList(v)==fBlockTagNo) ? true:false;
+	return (fBlockingList[v]==fBlockTagNo) ? true:false;
 }
 
 
@@ -53,14 +52,14 @@ inline void G4BlockingList::Reset()
 
 inline void G4BlockingList::Enlarge(const G4int nv)
 {
-	G4int len=fBlockingList.length();
+	G4int len=fBlockingList.size();
 	if (len<nv)
 		{
 			G4int newlen=(nv/fStride+1)*fStride;
-			fBlockingList.reshape(newlen);
+			fBlockingList.resize(newlen);
 			for (G4int i=len;i<newlen;i++)
 				{
-					fBlockingList(i)=0;
+					fBlockingList[i]=0;
 				}
 		}
 }
