@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4LogicalSkinSurface.icc,v 1.2 2000-11-01 16:51:06 gcosmo Exp $
+// $Id: G4LogicalSkinSurface.icc,v 1.3 2001-04-17 14:44:24 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -23,11 +23,3 @@ void G4LogicalSkinSurface::SetLogicalVolume(G4LogicalVolume* vol)
 {
   LogVolume = vol;
 }
-
-#if THESE_ARE_NEEDED
-inline
-size_t G4LogicalSkinSurface::GetIndex() const
-{
-  return theIndexInTable;
-}
-#endif
