@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VoxelNavigation.hh,v 1.7 2000-11-01 16:51:08 gcosmo Exp $
+// $Id: G4VoxelNavigation.hh,v 1.8 2001-04-17 14:44:25 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -36,8 +36,7 @@
 #include "G4SmartVoxelProxy.hh"
 #include "G4SmartVoxelNode.hh"
 #include "G4SmartVoxelHeader.hh"
-#include "g4rw/tvvector.h"
-#include "g4rw/tpvector.h"
+#include "g4std/vector"
 
 class G4VoxelNavigation
 {
@@ -90,19 +89,19 @@ class G4VoxelNavigation
       // Note: fVoxelDepth==0+ => fVoxelAxisStack(0+) contains axes of voxel
       //       fVoxelDepth==-1 -> not in voxel
 
-    G4RWTValVector<EAxis> fVoxelAxisStack;
+    G4std::vector<EAxis> fVoxelAxisStack;
       // Voxel axes
 
-    G4RWTValVector<G4int> fVoxelNoSlicesStack;
+    G4std::vector<G4int> fVoxelNoSlicesStack;
       // No slices per voxel at each level
 
-    G4RWTValVector<G4double> fVoxelSliceWidthStack; 
+    G4std::vector<G4double> fVoxelSliceWidthStack; 
       // Width of voxels at each level 
 
-    G4RWTValVector<G4int> fVoxelNodeNoStack;	  
+    G4std::vector<G4int> fVoxelNodeNoStack;	  
       // Node no point is inside at each level 
 				
-    G4RWTPtrVector<G4SmartVoxelHeader> fVoxelHeaderStack;
+    G4std::vector<G4SmartVoxelHeader*> fVoxelHeaderStack;
       // Voxel headers at each level
 
     G4SmartVoxelNode* fVoxelNode;
