@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VoxelNavigation.icc,v 1.4 2000-11-20 18:59:44 gcosmo Exp $
+// $Id: G4VoxelNavigation.icc,v 1.5 2001-04-17 14:44:25 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -18,7 +18,7 @@ G4VoxelNavigation::G4VoxelNavigation()
     fVoxelNoSlicesStack(kNavigatorVoxelStackMax),
     fVoxelSliceWidthStack(kNavigatorVoxelStackMax),
     fVoxelNodeNoStack(kNavigatorVoxelStackMax),
-    fVoxelHeaderStack(kNavigatorVoxelStackMax),
+    fVoxelHeaderStack(kNavigatorVoxelStackMax,(G4SmartVoxelHeader*)0),
     fVoxelNode(0)
 {
 }
@@ -55,11 +55,11 @@ G4VoxelNavigation::VoxelLocate(G4SmartVoxelHeader *pHead,
 			targetNodeNo=targetHeaderNoSlices-1;
 			}
 // Stack info for stepping
-		fVoxelAxisStack(fVoxelDepth)=targetHeaderAxis;
-		fVoxelNoSlicesStack(fVoxelDepth)=targetHeaderNoSlices;
-		fVoxelSliceWidthStack(fVoxelDepth)=targetHeaderNodeWidth;
-		fVoxelNodeNoStack(fVoxelDepth)=targetNodeNo;
-		fVoxelHeaderStack(fVoxelDepth)=targetVoxelHeader;
+		fVoxelAxisStack[fVoxelDepth]=targetHeaderAxis;
+		fVoxelNoSlicesStack[fVoxelDepth]=targetHeaderNoSlices;
+		fVoxelSliceWidthStack[fVoxelDepth]=targetHeaderNodeWidth;
+		fVoxelNodeNoStack[fVoxelDepth]=targetNodeNo;
+		fVoxelHeaderStack[fVoxelDepth]=targetVoxelHeader;
 		
 		sampleProxy=targetVoxelHeader->GetSlice(targetNodeNo);
 		if (sampleProxy->IsNode())
