@@ -1,4 +1,4 @@
-$Id: History,v 1.34 2001-03-28 16:46:06 japost Exp $
+$Id: History,v 1.35 2001-04-17 14:44:23 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,15 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+April 17th, 2001     G. Cosmo - geomvol-V03-01-00
+- Migration to STL vector:
+  o Modified classes:
+    G4VoxelNavigation, G4NavigationHistory, G4BlockingList,
+    G4LogicalSkinSurface, G4LogicalBorderSurface.
+  o Removed GetIndex() and table-index data from G4LogicalSkinSurface
+    and G4LogicalBorderSurface.
+
 March 19th, 2001     J. Apostolakis - geomvol-V03-00-03
 - G4PropagatorInField: 
      Modified to use new (not obsolete) methods of G4FieldTrack. 
